syntax = "proto3";

package model;

option java_package = "com.snottis.example.grpcservice.country.model";
option java_outer_classname = "CountryProto";

service CountryService {
    rpc findCountryByName (FindByNameRequest) returns (Country) {}
    rpc findByGDP (FindByRequest) returns (Countries) {}
}

message FindByNameRequest {
    string name = 1;
}

message FindByRequest {
    optional float minimumGdp = 1;
    optional float maximumGdp = 2;
}

message Country {
    string name = 1;
    float gdp = 2;
}

message Countries {
    repeated Country country = 1;
}